bynkc/tests/fixtures/negative/100_http_path_param_not_stringy/src/svc.bynk
context svc

service api from http {
  on GET("/orders/:id") by v: Visitor (id: Int) -> Effect[HttpResult[String]] {
    Ok("nope")
  }
}
